# bong

./: CMakeLists.txt  INSTALL.md  README.md
cmake/modules/: FindGObject.cmake
demos/: browser.properties  search.properties
poc/: properties.c  properties.l
src/: BongConfig.cmake.in  CMakeLists.txt  Makefile  dtdfile.c  dtdfile.h  dtdfiletype.c  dtdfiletype.h  filetype.c  filetype.h  hashvalue.c  hashvalue.h  localestring.c  localestring.h  main.c  propertiesfiletype.c  propertiesfiletype.h  test2.c  test3.c  translatable.c  translatable.h  type.c  type.h  utils.c  utils.h
src/plugins/: CMakeLists.txt
src/plugins/dtd/: BongDtdConfig.cmake.in  CMakeLists.txt  dtdfiletype.c  dtdfiletype.h
src/plugins/dtd/qt/: BongQtDtdConfig.cmake.in  CMakeLists.txt  bongqt_dtd_export.hpp  dtdfiletypeqt.cpp  dtdfiletypeqt.hpp
src/plugins/properties/: BongPropertiesConfig.cmake.in  CMakeLists.txt  propertiesfiletype.c  propertiesfiletype.h
src/plugins/properties/qt/: BongQtPropertiesConfig.cmake.in  CMakeLists.txt  bongqt_properties_export.hpp  propertiesfiletypeqt.cpp  propertiesfiletypeqt.hpp
src/qt/: BongQtConfig.cmake.in  CMakeLists.txt  bongqt_export.hpp  filetypeqt.hpp  globalsqt.cpp  globalsqt.hpp  translatableqt.cpp  translatableqt.hpp
tests/: CMakeLists.txt  test2.c  test_dtd.c  test_properties.c  test_properties_2.c  test_qt_properties.cpp  test_translatable.c
